<resources>
    <string name="app_name">Movies App</string>
    <string name="list_fragment_label">Popular Films</string>
    <string name="error_text">There is a connection error. Please try again!</string>
    <string name="search_text">Search</string>
    <string name="separator">|</string>

    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="country">Country</string>
    <string name="box_office">Box Office</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="page">Page %1$d</string>

</resources>